--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     compile fileTree(dir: 'lib', include: '*.jar')
 
     // https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons
-   // implementation group: 'org.springframework.data', name: 'spring-data-commons', version: '2.5.6'
+   // implementation group: 'org.springframework.data', name: 'spring-data-commons', version: '2.5.6' no se comento???
 
     //Web Services
     // https://mvnrepository.com/artifact/com.sun.jersey/jersey-client
