--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ configurations {
 }
 
 dependencies {
-    developmentOnly("org.springframework.boot:spring-boot-devtools")
+    //developmentOnly('org.springframework.boot:spring-boot-devtools')
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-autoconfigure"
     compile "org.grails:grails-core"
@@ -78,7 +78,7 @@ dependencies {
     compile fileTree(dir: 'lib', include: '*.jar')
 
     // https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons
-    implementation group: 'org.springframework.data', name: 'spring-data-commons', version: '2.5.6'
+    implementation group: 'org.springframework.data', name: 'spring-data-commons', version: '2.4.6'
 
     //Web Services
     // https://mvnrepository.com/artifact/com.sun.jersey/jersey-client
@@ -94,10 +94,10 @@ dependencies {
 bootRun {
     ignoreExitValue true
     jvmArgs(
-        '-Dspring.output.ansi.enabled=always', 
-        '-noverify', 
-        '-XX:TieredStopAtLevel=1',
-        '-Xmx1024m')
+            '-Dspring.output.ansi.enabled=always',
+            '-noverify',
+            '-XX:TieredStopAtLevel=1',
+            '-Xmx1024m')
     sourceResources sourceSets.main
     String springProfilesActive = 'spring.profiles.active'
     systemProperty springProfilesActive, System.getProperty(springProfilesActive)
