--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,7 @@
 base.url=http://localhost:8080
 resource.tipoDenuncia=/tipoDenuncias
 resource.user=/users
+resource.city=/cities
+resource.neighborhood=/neighborhoods
+resource.tipoSujeto=/tiposSujetos
+resource.sujeto=/sujetos
