--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,15 @@ configurations {
     runtimeClasspath {
         extendsFrom developmentOnly
     }
+    all*.exclude group:'org.springframework.boot', module:'spring-boot-starter-logging'
 }
 
 dependencies {
    // developmentOnly("org.springframework.boot:spring-boot-devtools")
-    compile "org.springframework.boot:spring-boot-starter-logging"
-    compile "org.springframework.boot:spring-boot-autoconfigure"
+   // compile "org.springframework.boot:spring-boot-starter-logging"
+    compile ('org.springframework.boot:spring-boot-autoconfigure'){
+        exclude group: 'ch.qos.logback', module: 'logback-classic'
+    }
     compile "org.grails:grails-core"
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-starter-tomcat"
@@ -48,7 +51,7 @@ dependencies {
     compile "org.grails:grails-plugin-services"
     compile "org.grails:grails-plugin-url-mappings"
     compile "org.grails:grails-plugin-interceptors"
-    compile "org.grails.plugins:cache"
+   // compile "org.grails.plugins:cache"
     compile "org.grails.plugins:async"
     compile "org.grails.plugins:scaffolding"
     compile "org.grails.plugins:events"
@@ -81,10 +84,7 @@ dependencies {
     // Dependencias externas:
     compile fileTree(dir: 'lib', include: '*.jar')
 
-    // https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons
-   // implementation group: 'org.springframework.data', name: 'spring-data-commons', version: '2.5.6' no se comento???
-
-    //Web Services
+    // WEB SERVICES
     // https://mvnrepository.com/artifact/com.sun.jersey/jersey-client
     implementation group: 'com.sun.jersey', name: 'jersey-client', version: '1.19.4'
 
@@ -93,6 +93,17 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-core-asl
     implementation group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.2'
+
+    // CACHE
+    // https://mvnrepository.com/artifact/com.google.code.simple-spring-memcached/xmemcached-provider
+    implementation 'com.google.code.simple-spring-memcached:xmemcached-provider:4.1.3'
+
+    // https://mvnrepository.com/artifact/com.google.code.simple-spring-memcached/spring-cache
+    implementation 'com.google.code.simple-spring-memcached:spring-cache:4.1.3'
+
+    // LOG4J 2
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-log4j2
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2:2.5.6'
 }
 
 bootRun {
