--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ out/
 .classpath
 lib/protectionapp-2021.jar
 *.log
+src/integration-test/groovy/com/sd/UserServiceSpec.groovy
+src/test/groovy/com/sd/UserControllerSpec.groovy
+src/test/groovy/com/sd/UserSpec.groovy
