--- a/grails-app/conf/appconfig.properties
+++ b/grails-app/conf/appconfig.properties
@@ -5,3 +5,4 @@ resource.city=/cities
 resource.neighborhood=/neighborhoods
 resource.tipoSujeto=/tiposSujetos
 resource.sujeto=/sujetos
+resource.denunciaEstado=/denunciaEstados
