cambios_cliente_sujeto

--- a/grails-app/conf/appconfig.properties
+++ b/grails-app/conf/appconfig.properties
@@ -6,3 +6,4 @@ resource.neighborhood=/neighborhoods
 resource.tipoSujeto=/tiposSujetos
 resource.sujeto=/sujetos
 resource.denunciaEstado=/denunciaEstados
+resource.denunciaEstado=/denunciaEstados
