Denuncia - falta corregir errores

--- a/config.properties
+++ b/config.properties
@@ -5,3 +5,5 @@ resource.city=/cities
 resource.neighborhood=/neighborhoods
 resource.tipoSujeto=/tiposSujetos
 resource.sujeto=/sujetos
+resource.estadoDenuncia=/denunciaEstados
+resource.denuncia=/denuncias
