--- a/grails-app/conf/appconfig.properties
+++ b/grails-app/conf/appconfig.properties
@@ -5,4 +5,5 @@ resource.city=/cities
 resource.neighborhood=/neighborhoods
 resource.tipoSujeto=/tiposSujetos
 resource.sujeto=/sujetos
-resource.denunciaEstado=/denunciaEstados
+resource.estadoDenuncia=/denunciaEstados
+resource.denuncia=/denuncias
