--- a/config.properties
+++ b/config.properties
@@ -7,3 +7,4 @@ resource.tipoSujeto=/tiposSujetos
 resource.sujeto=/sujetos
 resource.estadoDenuncia=/denunciaEstados
 resource.denuncia=/denuncias
+global.pagination=10
