--- a/grails-app/conf/appconfig.properties
+++ b/grails-app/conf/appconfig.properties
@@ -7,3 +7,4 @@ resource.tipoSujeto=/tiposSujetos
 resource.sujeto=/sujetos
 resource.estadoDenuncia=/denunciaEstados
 resource.denuncia=/denuncias
+global.pagination=10
