--- a/grails-app/conf/config.properties
+++ b/grails-app/conf/config.properties
@@ -1,4 +1,4 @@
-base.url=http://localhost:8080
+base.url=http://localhost:8081
 resource.tipoDenuncia=/tipoDenuncias
 resource.user=/users
 resource.city=/cities
@@ -8,3 +8,4 @@ resource.sujeto=/sujetos
 resource.estadoDenuncia=/denunciaEstados
 resource.denuncia=/denuncias
 global.pagination=10
+resource.depEstado=/depEstado
