Elementos basicos de Investigacion  (cliente)

--- a/config.properties
+++ b/config.properties
@@ -8,3 +8,5 @@ resource.sujeto=/sujetos
 resource.estadoDenuncia=/denunciaEstados
 resource.denuncia=/denuncias
 global.pagination=10
+resource.depEstado=/depEstado
+resource.investigacion=/investigaciones
