--- a/grails-app/conf/config.properties
+++ b/grails-app/conf/config.properties
@@ -9,3 +9,4 @@ resource.estadoDenuncia=/denunciaEstados
 resource.denuncia=/denuncias
 global.pagination=10
 resource.depEstado=/depEstado
+resource.investigacion=/investigaciones
