--- a/grails-app/conf/config.properties
+++ b/grails-app/conf/config.properties
@@ -9,3 +9,6 @@ resource.estadoDenuncia=/denunciaEstados
 resource.denuncia=/denuncias
 global.pagination=10
 resource.depEstado=/depEstado
+tipo.denunciante.id=0
+tipo.victima.id=1
+tipo.victimario.id=2
